# haskellstein

./: .gitignore  .travis.yml  Controls.txt  LICENSE  Makefile  README.md  haskellstein.cabal  stack.yaml  workList.txt  worklist.txt
app/: Main.hs
data/: shader.frag
genmaps/: Makefile
genmaps/src/: map.c
lib/: libsfml-audio.so.2.4  libsfml-window.so.2.4.2
lib/libc/: Makefile
lib/libc/src/: map.c  map2.c
sftool/: Makefile  Makefile1  sftool.cpp
src/: CheckMap.hs  Data.hs  Haskellstein.hs  Initialize.hs  Interactions.hs  Main.hs
src/Haskellstein/: CheckMap.hs  Data.hs  Engine.hs  Initialize.hs  Interactions.hs  Map.hs  Picture.hs  Player.hs  Raycaster.hs  Raycasting.hs  Sftool.hs  Texconsts.hs  Texwork.hs
src/Haskellstein/Engine/: Camera.hs  Map.hs  Picture.hs  Raycasting.hs  Render.hs  Settings.hs  TileMap.hs  Vector.hs
src/Haskellstein/Raycasting/: Rayconsts.hs  Spritecaster.hs  Wallcaster.hs
test/: Spec.hs
tilemaps/: README.txt  first_map.txt  fourth_map.txt  genmap1.txt  second_map.txt  testlvl.txt  third_map.txt
