name:                haskellstein
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              REbels From AL
maintainer:          --
copyright:           2018 REbels From AL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Data
                     , Initialize
                     , CheckMap
                     , Interactions
  build-depends:       base >= 4.7 && < 5
                     , ilist
  default-language:    Haskell2010

executable haskellstein
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellstein
  default-language:    Haskell2010

test-suite haskellstein-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellstein
                     , ilist
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

