name:                haskellstein
version:             0.1
license:             MIT
license-file:        LICENSE
author:              REbels From AL
maintainer:          --
copyright:           2018 REbels From AL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
                       -Wno-type-defaults
  build-depends:       base >= 4.7 && < 5
                     , random
  exposed-modules:
      Haskellstein
      Haskellstein.Data
      Haskellstein.Initialize
      Haskellstein.CheckMap
      Haskellstein.Map
      Haskellstein.Interactions
      Haskellstein.Picture
      Haskellstein.Sftool
      Haskellstein.Texconsts
      Haskellstein.Texwork
      Haskellstein.Raycaster
      Haskellstein.Raycasting.Spritecaster
      Haskellstein.Raycasting.Wallcaster
      Haskellstein.Raycasting.Rayconsts
  default-language:    Haskell2010

executable haskellstein
  hs-source-dirs:      src 
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellstein
                     , random
  default-language:    Haskell2010

test-suite haskellstein-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellstein
                     , random
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
